--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,15 @@
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>${project.artifactId}</name>
+    <url>https://github.com/cloudogu/scm-tagprotection-plugin</url>
     <description>This plugin enables configurable protection against removal of tags for repositories in SCM Manager.</description>
+
+    <scm>
+        <connection>scm:git:https://github.com/cloudogu/scm-tagprotection-plugin</connection>
+        <developerConnection>scm:git:https://github.com/cloudogu/scm-tagprotection-plugin</developerConnection>
+        <url>https://github.com/cloudogu/scm-tagprotection-plugin</url>
+        <tag>HEAD</tag>
+    </scm>
 
     <dependencies>
 
