--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <groupId>sonia.scm.plugins</groupId>
     <artifactId>scm-tagprotection-plugin</artifactId>
     <packaging>jar</packaging>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <url>https://github.com/cloudogu/scm-tagprotection-plugin</url>
     <description>This plugin enables configurable protection against removal of tags for repositories in SCM Manager.</description>
@@ -21,7 +21,7 @@
         <connection>scm:git:https://github.com/cloudogu/scm-tagprotection-plugin</connection>
         <developerConnection>scm:git:https://github.com/cloudogu/scm-tagprotection-plugin</developerConnection>
         <url>https://github.com/cloudogu/scm-tagprotection-plugin</url>
-        <tag>1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencies>
