--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,7 +12,7 @@
     <groupId>sonia.scm.plugins</groupId>
     <artifactId>scm-tagprotection-plugin</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>${project.artifactId}</name>
     <url>https://github.com/cloudogu/scm-tagprotection-plugin</url>
     <description>This plugin enables configurable protection against removal of tags for repositories in SCM Manager.</description>
@@ -22,7 +21,7 @@
         <connection>scm:git:https://github.com/cloudogu/scm-tagprotection-plugin</connection>
         <developerConnection>scm:git:https://github.com/cloudogu/scm-tagprotection-plugin</developerConnection>
         <url>https://github.com/cloudogu/scm-tagprotection-plugin</url>
-        <tag>HEAD</tag>
+        <tag>1.0</tag>
     </scm>
 
     <dependencies>
