--- a/src/main/resources/META-INF/scm/plugin.xml
+++ b/src/main/resources/META-INF/scm/plugin.xml
@@ -46,4 +46,8 @@
     <min-version>${project.parent.version}</min-version>
   </conditions>
 
+  <resources>
+    <script>assets/scm-tagprotection-plugin.bundle.js</script>
+  </resources>
+
 </plugin>
