--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>scm-plugins</artifactId>
         <groupId>sonia.scm.plugins</groupId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0-rc1</version>
     </parent>
 
     <groupId>sonia.scm.plugins</groupId>
     <artifactId>scm-tagprotection-plugin</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-rc1</version>
     <name>${project.artifactId}</name>
     <packaging>smp</packaging>
     <url>https://github.com/scm-manager/scm-tagprotection-plugin</url>
