--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,9 @@
     <parent>
         <artifactId>scm-plugins</artifactId>
         <groupId>sonia.scm.plugins</groupId>
-        <version>2.0.0-rc1</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>sonia.scm.plugins</groupId>
     <artifactId>scm-tagprotection-plugin</artifactId>
     <version>2.0.0-SNAPSHOT</version>
     <name>${project.artifactId}</name>
@@ -70,6 +69,15 @@
                     <tagNameFormat>@{project.version}</tagNameFormat>
                 </configuration>
             </plugin>
+          <plugin>
+            <groupId>io.openapitools.swagger</groupId>
+            <artifactId>swagger-maven-plugin</artifactId>
+            <configuration>
+              <resourcePackages>
+                <resourcePackage>sonia.scm.tagprotection</resourcePackage>
+              </resourcePackages>
+            </configuration>
+          </plugin>
 
         </plugins>
     </build>
