--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <artifactId>scm-plugins</artifactId>
         <groupId>sonia.scm.plugins</groupId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0-rc5</version>
     </parent>
 
     <artifactId>scm-tagprotection-plugin</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-rc2</version>
     <name>${project.artifactId}</name>
     <packaging>smp</packaging>
     <url>https://github.com/scm-manager/scm-tagprotection-plugin</url>
@@ -19,7 +19,6 @@
         <connection>scm:git:https://github.com/scm-manager/scm-tagprotection-plugin</connection>
         <developerConnection>scm:git:https://github.com/scm-manager/scm-tagprotection-plugin</developerConnection>
         <url>https://github.com/scm-manager/scm-tagprotection-plugin</url>
-        <tag>HEAD</tag>
     </scm>
 
     <dependencies>
