--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>scm-tagprotection-plugin</artifactId>
-    <version>2.0.0-rc2</version>
+    <version>2.0.0-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <packaging>smp</packaging>
     <url>https://github.com/scm-manager/scm-tagprotection-plugin</url>
