--- a/pom.xml
+++ b/pom.xml
@@ -114,11 +114,11 @@
             <url>https://jitpack.io</url>
         </repository>
 
-        <repository>
-            <id>maven.scm-manager.org</id>
-            <name>scm-manager release repository</name>
-            <url>http://maven.scm-manager.org/nexus/content/groups/public</url>
-        </repository>
+      <repository>
+        <id>packages.scm-manager.org</id>
+        <name>scm-manager release repository</name>
+        <url>https://packages.scm-manager.org/repository/public/</url>
+      </repository>
 
     </repositories>
 
