--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     </parent>
 
     <artifactId>scm-tagprotection-plugin</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <packaging>smp</packaging>
     <url>https://github.com/scm-manager/scm-tagprotection-plugin</url>
