--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@scm-manager/scm-tagprotection-plugin",
     "private": true,
-    "version": "3.0.1",
+    "version": "3.0.2-SNAPSHOT",
     "license": "AGPL-3.0-only",
     "main": "./src/main/js/index.ts",
     "scripts": {
