--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 }
 
 scmPlugin {
-  scmVersion = "3.7.0"
+  scmVersion = "3.8.1-SNAPSHOT"
   displayName = "Tag Protection"
   description = "Enables configurable protection against removal of tags for repositories in SCM-Manager"
   author = "Oliver Milke"
